Prevent columns from wrapping. Quick styling fix

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 .react-bootstrap-table table {
   table-layout: auto;
+  white-space: nowrap;
 }
 
 
